Fixes campaign thumbnail left alignment issue

--- a/admin/client/src/components/ListGroup/ListGroup.scss
+++ b/admin/client/src/components/ListGroup/ListGroup.scss
@@ -48,7 +48,7 @@
   display: block;
   background: $gray-lighter;
   float: left;
-  margin: -12px 12px 0 - $spacer-y;
+  margin: -12px 12px 0 #{0 - $spacer-y};
 }
 
 .list-group-item__info {
